<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AdaugareCardActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/viewSus"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="117dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="@+id/viewSusdeschis"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_add_24" />

    <TextView
        android:id="@+id/tvAdaugareCardNou"
        android:layout_width="229dp"
        android:layout_height="92dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/completeaza_datele_pentru_a_crea_un_nou_cont"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/etNume"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/colturi_rotunjite"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="Nume"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAlbastruInchis"
        app:layout_goneMarginTop="40dp" />


    <RadioGroup
        android:id="@+id/rbSexType"
        android:layout_width="325dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/colturi_rotunjite"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNume">

        <RadioButton
            android:id="@+id/rbFeminin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/colturi_rotunjite"
            android:checked="true"
            android:text="@string/feminin" />

        <RadioButton
            android:id="@+id/rbMasculin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/colturi_rotunjite"
            android:text="@string/masculin" />
    </RadioGroup>

    <EditText
        android:id="@+id/etIDCard"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/colturi_rotunjite"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="ID Card"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textSize="14dp"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbSexType"
        app:layout_goneMarginTop="40dp" />

    <Spinner
        android:id="@+id/spinnerNumeMagazin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"

        android:background="@drawable/colturi_rotunjite"
        app:layout_constraintTop_toBottomOf="@+id/etIDCard"
        tools:layout_editor_absoluteX="0dp"></Spinner>

    <EditText
        android:id="@+id/etDataEliberare"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/colturi_rotunjite"
        android:drawableStart="@drawable/ic_baseline_credit_card_blue"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/format_data"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textSize="14dp"


        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerNumeMagazin"
        app:layout_goneMarginTop="40dp" />

    <Button
        android:id="@+id/buttonAdaugareCard"
        android:layout_width="347dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buton_rotunjit"
        android:text="@string/adauga_card"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/viewAlbastruDeschis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/etDataEliberare"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/viewAlbastruInchis"
        android:layout_width="0dp"
        android:layout_height="60dp"

        android:background="@drawable/wavesus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSus" />


    <View
        android:id="@+id/viewAlbastruDeschis"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/wavesus_deschis"
        app:layout_constraintBottom_toTopOf="@+id/viewSusdeschis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/viewSusdeschis"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>