<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".magazine.partenere.InfoMagazinePartenereActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/viewSus3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewAlbastruInchis3"
        android:layout_width="0dp"
        android:layout_height="80dp"

        android:background="@drawable/wavesus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSus3" />


    <Button
        android:id="@+id/buttonIKEA"
        android:layout_width="206dp"
        android:layout_height="34dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/buton_rotunjit"
        android:onClick="accesareSiteIKEA"
        android:text="@string/site_web_ikea"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCarrefour"
        android:layout_width="206dp"
        android:layout_height="34dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/buton_rotunjit"
        android:onClick="accesareSiteCarrefour"
        android:text="@string/site_web_carrefour"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIKEA" />

    <Button
        android:id="@+id/buttonLidl"
        android:layout_width="206dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buton_rotunjit"
        android:onClick="accesareSiteLIDL"
        android:text="@string/site_web_lidl"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCarrefour" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="370dp"
        android:layout_height="407dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewSusdeschis2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLidl"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/viewAlbastruDeschis2"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@drawable/wavesus_deschis"
        app:layout_constraintBottom_toTopOf="@+id/viewSusdeschis2"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/viewSusdeschis2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>