<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profil.ProfilActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/viewSus"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <View
        android:id="@+id/viewAlbastruInchis"
        android:layout_width="0dp"
        android:layout_height="60dp"

        android:background="@drawable/wavesus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSus" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="117dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="@+id/viewSusdeschis"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/person_login" />

    <TextView
        android:id="@+id/tvProfil"
        android:layout_width="229dp"
        android:layout_height="92dp"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/datele_mele"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPrenume"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/colturi_rotunjite"
        android:drawableStart="@drawable/ic_baseline_person_pin_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="Prenume"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNume" />

    <EditText
        android:id="@+id/etNume"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/colturi_rotunjite"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="Nume"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSus"
        app:layout_goneMarginTop="40dp" />

    <TextView
        android:id="@+id/textViewSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrenume" />

    <RadioGroup
        android:id="@+id/rgSexType"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="32dp"

        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNume">

        <RadioButton
            android:id="@+id/rbFeminin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/colturi_rotunjite"
            android:checked="true"
            android:text="@string/feminin" />

        <RadioButton
            android:id="@+id/rbMasculin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/colturi_rotunjite"
            android:text="@string/masculin" />

    </RadioGroup>


    <Button
        android:id="@+id/buttonSalvare"
        android:layout_width="258dp"
        android:layout_height="47dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/buton_rotunjit"
        android:text="Salvare"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/viewAlbastruDeschis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/viewAlbastruDeschis"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/wavesus_deschis"
        app:layout_constraintBottom_toTopOf="@+id/viewSusdeschis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/viewSusdeschis"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />



</androidx.constraintlayout.widget.ConstraintLayout>